--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p, span{
 .section{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
 }
 .section-heading{
